// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MarkdownBlock
    block={
        Object {
            "fields": Object {
              "backgroundColor": "foo",
              "content": "foo",
              "drip": false,
              "title": "foo",
              "titleLeft": true,
            },
            "sys": Object {
              "contentType": Object {
                "sys": Object {},
              },
              "createdAt": "foo",
              "environment": Object {
                "sys": Object {},
              },
              "id": "foo",
              "locale": "en-US",
              "revision": 3,
              "space": Object {
                "sys": Object {},
              },
              "type": "foo",
              "updatedAt": "foo",
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w100 flex content-width undefined"
>
        <div
                className="col-12 md-col-4"
        >
                <h2
                        className="block-headline"
                >
                        foo
                </h2>
        </div>
        <div
                className="transition-slide-up mx-auto py4 col-12 md-col-8"
        >
                <div
                        className="col-12 markdown-block form-container-width"
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "<p>foo</p>
                                ",
                                      }
                        }
                />
        </div>
</div>,
      "className": "flex justify-center px3",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-4"
>
            <h2
                        className="block-headline"
            >
                        foo
            </h2>
</div>,
          <div
            className="transition-slide-up mx-auto py4 col-12 md-col-8"
>
            <div
                        className="col-12 markdown-block form-container-width"
                        dangerouslySetInnerHTML={
                                    Object {
                                                "__html": "<p>foo</p>
                                    ",
                                              }
                        }
            />
</div>,
        ],
        "className": "w100 flex content-width undefined",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h2
              className="block-headline"
>
              foo
</h2>,
            "className": "col-12 md-col-4",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "className": "block-headline",
            },
            "ref": null,
            "rendered": "foo",
            "type": "h2",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-12 markdown-block form-container-width"
                dangerouslySetInnerHTML={
                                Object {
                                                "__html": "<p>foo</p>
                                ",
                                              }
                }
/>,
              null,
            ],
            "className": "transition-slide-up mx-auto py4 col-12 md-col-8",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "col-12 markdown-block form-container-width",
                "dangerouslySetInnerHTML": Object {
                  "__html": "<p>foo</p>
",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 flex content-width undefined"
>
          <div
                    className="col-12 md-col-4"
          >
                    <h2
                              className="block-headline"
                    >
                              foo
                    </h2>
          </div>
          <div
                    className="transition-slide-up mx-auto py4 col-12 md-col-8"
          >
                    <div
                              className="col-12 markdown-block form-container-width"
                              dangerouslySetInnerHTML={
                                        Object {
                                                  "__html": "<p>foo</p>
                                        ",
                                                }
                              }
                    />
          </div>
</div>,
        "className": "flex justify-center px3",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-12 md-col-4"
>
              <h2
                            className="block-headline"
              >
                            foo
              </h2>
</div>,
            <div
              className="transition-slide-up mx-auto py4 col-12 md-col-8"
>
              <div
                            className="col-12 markdown-block form-container-width"
                            dangerouslySetInnerHTML={
                                          Object {
                                                        "__html": "<p>foo</p>
                                          ",
                                                      }
                            }
              />
</div>,
          ],
          "className": "w100 flex content-width undefined",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h2
                className="block-headline"
>
                foo
</h2>,
              "className": "col-12 md-col-4",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "block-headline",
              },
              "ref": null,
              "rendered": "foo",
              "type": "h2",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-12 markdown-block form-container-width"
                  dangerouslySetInnerHTML={
                                    Object {
                                                      "__html": "<p>foo</p>
                                    ",
                                                    }
                  }
/>,
                null,
              ],
              "className": "transition-slide-up mx-auto py4 col-12 md-col-8",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "col-12 markdown-block form-container-width",
                  "dangerouslySetInnerHTML": Object {
                    "__html": "<p>foo</p>
",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MarkdownBlock
    block={
        Object {
            "fields": Object {
              "backgroudColor": "white",
              "content": "",
              "drip": false,
              "title": "",
              "titleLeft": false,
            },
          }
    }
    setRef={[Function]}
    z={0}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="w100 flex content-width"
>
        <div
                className="transition-slide-up mx-auto py4"
        >
                <div
                        className="col-12 markdown-block form-container-width"
                        dangerouslySetInnerHTML={
                                Object {
                                        "__html": "",
                                      }
                        }
                />
        </div>
</div>,
      "className": "flex justify-center px3",
      "style": Object {
        "zIndex": 0,
      },
    },
    "ref": [Function],
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          <div
            className="transition-slide-up mx-auto py4"
>
            <div
                        className="col-12 markdown-block form-container-width"
                        dangerouslySetInnerHTML={
                                    Object {
                                                "__html": "",
                                              }
                        }
            />
</div>,
        ],
        "className": "w100 flex content-width",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-12 markdown-block form-container-width"
                dangerouslySetInnerHTML={
                                Object {
                                                "__html": "",
                                              }
                }
/>,
              null,
            ],
            "className": "transition-slide-up mx-auto py4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "col-12 markdown-block form-container-width",
                "dangerouslySetInnerHTML": Object {
                  "__html": "",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            null,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="w100 flex content-width"
>
          <div
                    className="transition-slide-up mx-auto py4"
          >
                    <div
                              className="col-12 markdown-block form-container-width"
                              dangerouslySetInnerHTML={
                                        Object {
                                                  "__html": "",
                                                }
                              }
                    />
          </div>
</div>,
        "className": "flex justify-center px3",
        "style": Object {
          "zIndex": 0,
        },
      },
      "ref": [Function],
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            null,
            <div
              className="transition-slide-up mx-auto py4"
>
              <div
                            className="col-12 markdown-block form-container-width"
                            dangerouslySetInnerHTML={
                                          Object {
                                                        "__html": "",
                                                      }
                            }
              />
</div>,
          ],
          "className": "w100 flex content-width",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-12 markdown-block form-container-width"
                  dangerouslySetInnerHTML={
                                    Object {
                                                      "__html": "",
                                                    }
                  }
/>,
                null,
              ],
              "className": "transition-slide-up mx-auto py4",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "col-12 markdown-block form-container-width",
                  "dangerouslySetInnerHTML": Object {
                    "__html": "",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              null,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
